--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ body {
   animation: rotateLoaderSlowInner 10s cubic-bezier(0.77, 0, 0.175, 1) 1;
 }
 
-.letter {
+.letter-loader {
   position: relative;
   top: 350px;
   left: 30px;
@@ -56,7 +56,7 @@ body {
   z-index: -1;
 }
 
-#nav-toggle {   
+#nav-toggle {
   position: fixed;
   top: 10px;
   left: 10px;
@@ -64,9 +64,9 @@ body {
   height: 36px;
 }
 
-#nav-toggle { 
+#nav-toggle {
   cursor: pointer; 
-  padding: 10px 35px 16px 0px; 
+  padding: 10px 35px 16px 0px;
 }
 #nav-toggle span, #nav-toggle span:before, #nav-toggle span:after {
   cursor: pointer;
@@ -79,7 +79,7 @@ body {
   content: '';
 }
 #nav-toggle span:before {
-  top: -10px; 
+  top: -10px;
 }
 #nav-toggle span:after {
   bottom: -10px;
@@ -136,10 +136,10 @@ li {
   padding: 0px 0;
   cursor: pointer;
   list-style: none;
-  
+
 }
 
-li:hover { 
+li:hover {
   background-color: #EAF2F6;
   color: black !important;
   padding: 10px;
@@ -155,10 +155,10 @@ a{
   color: white;
   font-weight: 800px;
 }
-li.sep { 
-  margin-top: 7px; 
-  padding-top: 14px; 
-  border-top: 1px solid lighten(#556270, 10%); 
+li.sep {
+  margin-top: 7px;
+  padding-top: 14px;
+  border-top: 1px solid lighten(#556270, 10%);
 }
 
 .redes{
@@ -178,7 +178,7 @@ li.sep {
 }
 
 body.menu-active nav#slide-menu {
-   left: 0px; 
+   left: 0px;
    background-color: black;
 }
 body.menu-active nav#slide-menu ul {
@@ -230,7 +230,7 @@ div.menu{
   -webkit-transition: all 300ms;
   transition: all 300ms;
 }
-div.menu:before { 
+div.menu:before {
   display: inline-block;
   width: 36px;
   height: 36px;
@@ -242,19 +242,19 @@ div.menu:before {
   line-height: 36px;
 }
 
-div.menu:hover { 
-  background: #E7E3D2; 
+div.menu:hover {
+  background: #E7E3D2;
   z-index:100;
 }
-div.menu-:before { 
-  color: #fcfeff; 
-} 
+div.menu-:before {
+  color: #fcfeff;
+}
 
 body.menu-active div#content {
-  left: 284px; 
-  border-radius: 7px 0 0 7px; 
+  left: 284px;
+  border-radius: 7px 0 0 7px;
 }
-body.menu-active div#content .menu #nav-toggle { 
+body.menu-active div#content .menu #nav-toggle {
   left: 294px; }
 
 /*  ***********************************/
